# test-python-packaging

./: .gitignore  CLAUDE.md  README.md  handler.py  pyproject.toml
modelserving/pytorch_serving/: Dockerfile
src/model/: predictor.py
src/utils/: preprocessing.py
