[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchserve-model-package"
version = "1.0.0"
description = "Example package for TorchServe deployment"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.7"
dependencies = [
    # Add your dependencies here
    # "torch>=1.9.0",
    # "torchvision",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]