[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "test-python-packaging"
description = "Example package for TorchServe deployment"
authors = [{name = "Quy Dinh", email = "dvquys@gmail.com"}]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
    "loguru>=0.7.3",
    "ruff>=0.11.12"
]
production = [
    "python-dotenv>=1.0.0",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = [
    "src",
    "src.*"
]

[tool.uv]
index-strategy = "unsafe-best-match"